Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,26 +159,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(map(lambda movie: movie['budget'], smovies))\n",
-    "y_values = None"
+    "x_values = list(map(lambda movie: movie['budget'], scaled_movies))\n",
+    "y_values = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13000000"
+       "13.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
