--- a/index.ipynb
+++ b/index.ipynb
@@ -827,7 +827,7 @@
     "            'mode': 'lines',\n",
     "            'name': f'error at {x}',\n",
     "            'x': [x, x],\n",
-    "            'y': [y_actual()]}"
+    "            'y': [y_actual(x, x_values, y_values)]}"
    ]
   },
   {
