--- a/index.ipynb
+++ b/index.ipynb
@@ -1136,7 +1136,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    return list(map(lambda i: error_line_trace(x_values, y_values, m, b, i), x_values))"
+    "    return list(map(lambda x: error_line_trace(x_values, y_values, m, b, i), x_values))"
    ]
   },
   {
