--- a/index.ipynb
+++ b/index.ipynb
@@ -2002,7 +2002,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x: ))"
+    "    return list(map(lambda x: squared_error(x_values, y_values, m, b, x), x))"
    ]
   },
   {
